--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
-    "@types/echarts": "^5.0.0",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "docx": "^9.5.1",
-    "echarts": "^6.0.0",
+    "echarts": "^5.6.0",
     "express": "^5.1.0",
     "file-saver": "^2.0.5",
+    "multer": "^2.0.2",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
     "vue": "^3.5.18",
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
+    "@types/echarts": "^4.9.22",
     "@types/node": "^22.16.5",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
